-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.3
-
ccb437ec4f (qt/qtdeclarative/dev) ccb437ec4f (qt/tqtc-qtdeclarative/dev)
qmllint complains if variables from javascript file are referenced:
Warning: main.qml:15:24: Property "color" not found on type "foo"
color: Foo.color
^^^^^
Warning: main.qml:20:24: Property "color" not found on type "bar"
color: Bar.color
^^^^^
- relates to
-
QTBUG-120551 qmllint: incorrectly warns when using a function in a javascript library
-
- Closed
-