qmlcompiler: Support accessing vars in JavaScript files

We basically had all the code in place already, all that remained was
to use the information we have in the type resolver. This change also
allows us to differeniate between const and non-const bindings now.

Fixes: QTBUG-100444
Change-Id: Ia4dac3647a2aa3c557916e6ec1be63a46bcc6ce0
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>