tests/auto/qml/qmllint/data/jsVarDeclarations.js
@@ -1,0 +1,3 @@
+var varProp = 5;
+let letProp = [ 1, 2, 3, 4 ];
+const constProp = "unchangable";
