tests/auto/qml/qmllint/data/jsVarDeclarations.qml
@@ -1,0 +1,9 @@
+import QtQuick
+
+import "jsVarDeclarations.js" as JSVars
+
+Item {
+    property int varProp: JSVars.varProp
+    property var letProp: JSVars.letProp
+    property string constProp: JSVars.constProp
+}
