tests/auto/qml/qmllint/data/jsVarDeclarationsWriteConst.qml
@@ -1,0 +1,7 @@
+import QtQuick
+
+import "jsVarDeclarations.js" as JSVars
+
+Item {
+    Component.onCompleted: { JSVars.constProp = "new value"; }
+}
